conformance/tests/backendtlspolicy-san.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy-san-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-san-dns-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-san-dns
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-san-dns-mismatch-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-san-dns-mismatch
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-san-uri-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-san-uri
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-san-uri-mismatch-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-san-uri-mismatch
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-multiple-sans-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-multiple-sans
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-multiple-mismatch-sans-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-multiple-mismatch-sans
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-san-dns-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-san-dns-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-san-uri-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-san-uri-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-multiple-sans-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-multiple-mismatch-sans-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: san-dns
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-san-dns-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "Hostname"
      hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: san-dns-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-san-dns-mismatch-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "Hostname"
      hostname: "dce.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: san-uri
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-san-uri-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "URI"
      uri: "spiffe://abc.example.com/test-identity"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: san-uri-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-san-uri-mismatch-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "URI"
      uri: "spiffe://def.example.com/test-identity"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: multiple-sans
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-multiple-sans-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "URI"
      uri: "spiffe://abc.example.com/test-identity"
    - type: "Hostname"
      hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: multiple-mismatch-sans
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backendtlspolicy-multiple-mismatch-sans-test
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
    subjectAltNames:
    - type: "URI"
      uri: "spiffe://def.example.com/test-identity"
    - type: "Hostname"
      hostname: "def.example.com"
